[package]
name = "kestrel"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
kestrel-process = { workspace = true }
kestrel-macro = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
