[package]
name = "ready-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
commander = { workspace = true }

[lints]
workspace = true 